[package]
name = "guile"
version = "0.0.2"
authors = ["Don Rodriguez <shymega@shymega.org.uk>",
"Christopher Dumas <christopherdumas@gmail.com>"]

description = "Safe bindings to GNU Guile."
repository = "https://github.com/shymega/guile-rs"
license = "GPL-3.0"

[dependencies]
libc="0.2"

[dependencies.guile-sys]
path = "guile-sys"
version = "0.1.1"

[[bin]]
name = "shell"
path = "examples/shell.rs"
