[package]
name = "guile-sys"
version = "0.1.1"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>",
"Christopher Dumas <christopherdumas@gmail.com>"]

description = "Low-level bindings to GNU Guile."
repository = "https://github.com/shymega/guile-rs"
license = "GPL-3.0"

[dependencies]
libc="0.2"

[build-dependencies]
bindgen = "0.26.3"